--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
+    "react-native-safe-area-context": "^4.10.9",
+    "react-native-safe-area-view": "^1.1.1",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
     "sass": "^1.77.8",
